--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive website food</title>
+        <title>Responsive Website</title>
     </head>
     <body>
 
@@ -22,7 +22,7 @@
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
             <nav class="nav bd-container">
-                <a href="#" class="nav__logo">Tasty</a>
+                <a href="#" class="nav__logo">Feliss Kitchenn</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
@@ -47,9 +47,9 @@
             <section class="home" id="home">
                 <div class="home__container bd-container bd-grid">
                     <div class="home__data">
-                        <h1 class="home__title">Tasty food</h1>
-                        <h2 class="home__subtitle">Try the best food of <br> the week.</h2>
-                        <a href="#" class="button">View Menu</a>
+                        <h1 class="home__title">Seafood Longgok!!!</h1>
+                        <h2 class="home__subtitle">Let the food <br> SPEAK!!</h2>
+                        <a href="#menu" class="button">Lihat Menu</a>
                     </div>
     
                     <img src="assets/img/home.png" alt="" class="home__img">
@@ -61,17 +61,16 @@
                 <div class="about__container  bd-grid">
                     <div class="about__data">
                         <span class="section-subtitle about__initial">About us</span>
-                        <h2 class="section-title about__initial">We cook the best <br> tasty food</h2>
+                        <h2 class="section-title about__initial">We cook the best <br> sea food</h2>
                         <p class="about__description">We cook the best food in the entire city, with excellent customer service, the best meals and at the best price, visit us.</p>
                         <a href="#" class="button">Explore history</a>
                     </div>
-
                     <img src="assets/img/about.jpg" alt="" class="about__img">
                 </div>
             </section>
 
             <!--========== SERVICES ==========-->
-            <section class="services section bd-container" id="services">
+<!--            <section class="services section bd-container" id="services">
                 <span class="section-subtitle">Offering</span>
                 <h2 class="section-title">Our amazing services</h2>
 
@@ -355,7 +354,7 @@
                         <p class="services__description">We offer our clients excellent quality services for many years, with the best and delicious food in the city.</p>
                     </div>
                 </div>
-            </section>
+            </section>-->
 
             <!--========== MENU ==========-->
             <section class="menu section bd-container" id="menu">
@@ -364,26 +363,26 @@
 
                 <div class="menu__container bd-grid">
                     <div class="menu__content">
-                        <img src="assets/img/plate1.png" alt="" class="menu__img">
-                        <h3 class="menu__name">Barbecue salad</h3>
-                        <span class="menu__detail">Delicious dish</span>
-                        <span class="menu__preci">$22.00</span>
+                        <img src="assets/img/001.png" alt="" class="menu__img">
+                        <h3 class="menu__name">Jom Melonggok</h3>
+                        <span class="menu__detail">Udang+Kerang+Kupang</span>
+                        <span class="menu__preci">$123.00</span>
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
                     <div class="menu__content">
-                        <img src="assets/img/plate2.png" alt="" class="menu__img">
-                        <h3 class="menu__name">Salad with fish</h3>
-                        <span class="menu__detail">Delicious dish</span>
-                        <span class="menu__preci">$12.00</span>
+                        <img src="assets/img/002.png" alt="" class="menu__img">
+                        <h3 class="menu__name">Set Terangkat</h3>
+                        <span class="menu__detail">Ketam+Kupang</span>
+                        <span class="menu__preci">$231.00</span>
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
                     
                     <div class="menu__content">
-                        <img src="assets/img/plate3.png" alt="" class="menu__img">
-                        <h3 class="menu__name">Spinach salad</h3>
-                        <span class="menu__detail">Delicious dish</span>
-                        <span class="menu__preci">$9.50</span>
+                        <img src="assets/img/003.png" alt="" class="menu__img">
+                        <h3 class="menu__name">Set Udang Limpah</h3>
+                        <span class="menu__detail">Kupang+Kerang+Udang</span>
+                        <span class="menu__preci">$144.50</span>
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
                 </div>
@@ -394,7 +393,7 @@
                 <div class="app__container bd-grid">
                     <div class="app__data">
                         <span class="section-subtitle app__initial">App</span>
-                        <h2 class="section-title app__initial">App is aviable</h2>
+                        <h2 class="section-title app__initial">Aplikasi tersedia</h2>
                         <p class="app__description">Find our application and download it, you can make reservations, food orders, see your deliveries on the way and much more.</p>
                         <div class="app__stores">
                             <a href="#"><img src="assets/img/app1.png" alt="" class="app__store"></a>
@@ -416,7 +415,7 @@
                     </div>
 
                     <div class="contact__button">
-                        <a href="#" class="button">Contact us now</a>
+                        <a href="wa.link/hu4jq0" class="button">Contact us now</a>
                     </div>
                 </div>
             </section>
@@ -426,12 +425,12 @@
         <footer class="footer section bd-container">
             <div class="footer__container bd-grid">
                 <div class="footer__content">
-                    <a href="#" class="footer__logo">Tasty Food</a>
+                    <a href="#" class="footer__logo">Feliss Kitchenn</a>
                     <span class="footer__description">Restaurant</span>
                     <div>
-                        <a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>
-                        <a href="#" class="footer__social"><i class='bx bxl-instagram'></i></a>
-                        <a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>
+                        <a href="https://www.facebook.com/felisskitchen" class="footer__social"><i class='bx bxl-facebook'></i></a>
+                        <a href="https://instagram.com/felisskitchen?igshid=YmMyMTA2M2Y=" class="footer__social"><i class='bx bxl-instagram'></i></a>
+                        <a href="https://twitter.com/home" class="footer__social"><i class='bx bxl-twitter'></i></a>
                     </div>
                 </div>
 
@@ -456,17 +455,17 @@
                 </div>
 
                 <div class="footer__content">
-                    <h3 class="footer__title">Adress</h3>
+                    <h3 class="footer__title">Alamat</h3>
                     <ul>
-                        <li>Lima - Peru</li>
-                        <li>Jr Union #999</li>
-                        <li>999 - 888 - 777</li>
-                        <li>tastyfood@email.com</li>
+                        <li>Sepang - Selangor</li>
+                        <li>Feliss Kitchenn</li>
+                        <li>0123 - 456 - 789</li>
+                        <li>felisskitchen@email.com</li>
                     </ul>
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; 2020 Bedimcode. All right reserved</p>
+            <p class="footer__copy">&#169; 2023 ONsemi. All right reserved</p>
         </footer>
 
         <!--========== SCROLL REVEAL ==========-->
